# rdhte

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE.md  README.md
.github/: SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  publish-python.yml
Python/: rdhte_dataset.csv  rdhte_illustration.py
Python/rdhte/: README.md  pyproject.toml
Python/rdhte/docs/: example.py
Python/rdhte/src/rdhte/: __init__.py  _helpers.py  _results.py  _vce.py  plot.py  rdbwhte.py  rdhte.py  rdhte_lincom.py
Python/rdhte/tests/: _make_parity_cluster_fixture.py  _make_parity_fixture.py  parity_fixture.csv  parity_fixture_cluster.csv  parity_fixture_continuous.csv  test_p3_rdbwhte.py  test_p4_plot.py  test_p5_summary.py  test_p6_interaction.py  test_p7_formula.py  test_p8_covs_eff.py  test_r_parity_p1.py  test_r_parity_p2.py  test_smoke.py
R/: rdhte_illustration.R
R/rdhte/: .Rbuildignore  .Rhistory  DESCRIPTION  NAMESPACE
R/rdhte/R/: helpers.R  plot.rdhte.R  rdbwhte.R  rdhte-package.R  rdhte.R  rdhte_contrast.R  rdhte_lincom.R
R/rdhte/data/: rdhte_dataset.rda
R/rdhte/man/: glance.rdbwhte.Rd  glance.rdhte.Rd  plot.rdhte.Rd  print.rdbwhte.Rd  print.rdhte.Rd  print.summary.rdbwhte.Rd  print.summary.rdhte.Rd  rdbwhte.Rd  rdhte-package.Rd  rdhte.Rd  rdhte_contrast.Rd  rdhte_dataset.Rd  rdhte_lincom.Rd  summary.rdbwhte.Rd  summary.rdhte.Rd  tidy.rdbwhte.Rd  tidy.rdhte.Rd
scripts/: build-stata-help-pdfs.do  build-stata-help-pdfs.py  check_repository.py
scripts/numerical-baselines/: README.md  compare_baselines.py  compare_stata_baseline.py  run_python_baseline.py  run_r_baseline.R  run_stata_baseline.do
stata/: rdbwhte.ado  rdbwhte.sthlp  rdhte.ado  rdhte.pkg  rdhte.sthlp  rdhte_countvars.ado  rdhte_dataset.dta  rdhte_fill_Nh.ado  rdhte_fvexpand.ado  rdhte_illustration.do  rdhte_lincom.ado  rdhte_lincom.sthlp  rdhte_plot.ado  rdhte_plot.sthlp  stata.toc
(+8 files in other folders)
